Radio buttons, datetime picker style

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-social/bootstrap-social.css" />
+		<link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
