--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		<!-- Directives -->
 		<script src="/app/shared/directives/detailAuctionDirective.js"></script>
 		<script src="/app/shared/directives/detailShipmentDirective.js"></script>
+		<script src="/app/shared/directives/Menu/menuDirective.js"></script>
 		<script src="/app/components/Manage/ViewShipments/egFiles.js"></script>
 
 		<!-- Route File -->
