--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -1,26 +1,26 @@
 <div class="auction-info col-xs-12 col-sm-9 col-md-9 col-lg-10" ng-class="(expired) ? 'auction-expired' : 'nonexpired'">
-    <div class="auction-label col-xs-12">From</div>
+    <div class="auction-label col-xs-12">{{'texts.auction.from' | i18next}}</div>
     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.from.city}}</span></div>
-    <div class="auction-label col-xs-12">To</div>
+    <div class="auction-label col-xs-12">{{'texts.auction.to' | i18next}}</div>
     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.to.city}}</span></div>
-    <div class="auction-label col-xs-12">Freight description</div>
+    <div class="auction-label col-xs-12">{{'texts.auction.freight_description' | i18next}}</div>
     <div class="auction-cell col-xs-12 col-sm-4 col-md-4 col-lg-4"><span>{{item.freight_description}}</span></div>
-    <div class="auction-label col-xs-12">Price</div>
+    <div class="auction-label col-xs-12">{{'texts.auction.price' | i18next}}</div>
     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2"><span>{{item.price}}</span></div>
-    <div class="auction-label col-xs-12">End auction</div>
+    <div class="auction-label col-xs-12">{{'texts.auction.end_auction' | i18next}}</div>
     <div class="auction-cell col-xs-12 col-sm-2 col-md-2 col-lg-2 end-date"><span>{{item.end_auction}}</span></div>
     <div ng-if="vm.withFavourite" class="favouriteButton" ng-class="(isFavourite) ? 'is-favourite' : 'non-favourite'">
         <span class="glyphicon glyphicon glyphicon-star" ng-click="vm.favourite()"></span>
     </div>
 </div>
 <div class="auction-button-detail col-xs-12 col-sm-3 col-md-3 col-lg-2">
-    <div class="my-button normal-button" ng-click="toggleDetail()"><span>DETAIL</span></div>
+    <div class="my-button normal-button" ng-click="toggleDetail()"><span>{{'texts.auction.detail' | i18next}}</span></div>
 </div>
 <div ng-show="show" class="auction-detail popover bottom col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="arrow"></div>
     <div>
         <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Místa vyzvednutí nákladu</h2>
+            <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction.pickup_places' | i18next}}</h2>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12 cities">
                 <div class="detail-label col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 city-from">{{item.from.city}}</div>
@@ -33,61 +33,61 @@
                 </div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Nahráno:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.loaded' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>pičovina</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.end_auction' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.end_auction}}</span></div>
             </div>
         </div>
         <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">O nákladu</h2>
+            <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.about_freight' | i18next}}</h2>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Popis:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.freight_description' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_description}}</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Typ:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.freight_type' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_type}}</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Velikost:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.freight_size' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_size}}</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Váha:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.freight_weight' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.freight_weight}}</span></div>
             </div>
         </div>
         <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-4">
-            <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">Aukce</h2>
+            <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction.auction_list' | i18next}}</h2>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Konec aukce:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.end_auction' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.end_auction}}</span></div>
             </div>
             <div class="detail-row col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>Minimální příhoz:</span></div>
+                <div class="detail-label col-xs-3 col-sm-4 col-md-3 col-lg-3"><span>{{'texts.auction.min_amount' | i18next}}:</span></div>
                 <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.min_amount}}</span></div>
             </div>
         </div>
     </div>
     <div class="clean-line-lg col-xs-0 col-sm-0 col-md-12 col-lg-12"></div>
     <div class="auction-detail-item col-xs-12 col-sm-6 col-md-4 col-lg-6">
-        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Historie příhozů</h2>
+        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.auction.history_amount' | i18next}}</h2>
         <div ng-if="history.length > 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="history-header row">
                 <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
                     #
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    Uživatel
+                    {{'texts.username' | i18next}}
                 </div>
                 <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-                    Datum
+                    {{'texts.date' | i18next}}
                 </div>
                 <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                    Příhoz
+                    {{'texts.amount' | i18next}}
                 </div>
             </div>
             <div class="history-list">
@@ -108,11 +108,11 @@
             </div>
         </div>
         <div ng-if="history.length == 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            Žádné přihozy..
+            {{'texts.no_amounts' | i18next}}
         </div>
     </div>
     <div ng-if="withBids && !canAssign" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
-        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Chcete přihodi?</h2>
+        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.want_bid' | i18next}}</h2>
         <div class="has-feedback has-feedback-left col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <select class="form-control my-input col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-model="vehicleSelect">
                 <option value="" disabled selected>{{'texts.vehicle' | i18next}}</option>
@@ -123,18 +123,18 @@
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
         </div>
         <div class="has-feedback has-feedback-left col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <input type="text" ng-model="bid" class="form-control my-input bid" placeholder="Přihodit"/>
+            <input type="text" ng-model="bid" class="form-control my-input bid" placeholder="{{'texts.bid' | i18next}}"/>
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
         </div>
         <span class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <timer countdown="item.secondsToEndAuction" max-time-unit="'day'" interval="1000">{{days}} D, {{hours}}:{{minutes}}:{{seconds}}</timer>
         </span>
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <div class="my-button important-button" ng-click="vm.bidAuction(bid, vehicleSelect)"><span>PŘIHODIT</span></div>
+            <div class="my-button important-button" ng-click="vm.bidAuction(bid, vehicleSelect)"><span>{{'texts.bid' | i18next}}</span></div>
         </div>
     </div>
     <div ng-if="canAssign" class="auction-detail-item auction-bid col-xs-12 col-sm-12 col-md-8 col-lg-6">
-        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Přiřadit řidiče</h2>
+        <h2 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.driver_assign' | i18next}}</h2>
         <div class="has-feedback has-feedback-left col-xs-12 col-sm-8 col-md-8 col-lg-8 ">
             <select class="form-control my-input col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-model="driverSelect">
                 <option value="" disabled selected>{{'texts.driver' | i18next}}</option>
@@ -145,7 +145,7 @@
             <i class="glyphicon glyphicon-lock form-control-feedback"></i>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-            <div class="my-button important-button" ng-click="vm.assigment(driverSelect)"><span>Přiřadit</span></div>
+            <div class="my-button important-button" ng-click="vm.assigment(driverSelect)"><span>{{'texts.assign' | i18next}}</span></div>
         </div>
     </div>
     <div class="border-fix"></div>
