--- a/app/shared/directives/detailShipmentDirective.html
+++ b/app/shared/directives/detailShipmentDirective.html
@@ -104,6 +104,7 @@
                 <div id="map-{{item.id_auction}}" class="map"></div>
             </div>
         </div>
+        <div ng-click="vm.getInvoice(item.id_auction)">INVOICE</div>
         <!-- Only for Android app-->
         <!--<div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1.2019.1')"><span>Check QR Code</span></div> -->
         <!--<div class="my-button normal-button" ng-click="vm.postGPS(item.id_auction)"><span>Post GPS</span></div> -->
