--- a/app/shared/directives/detailAuctionDirective.html
+++ b/app/shared/directives/detailAuctionDirective.html
@@ -148,6 +148,6 @@
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
             <div class="my-button important-button" ng-click="vm.assigment(driverSelect)"><span>{{'texts.assign' | i18next}}</span></div>
         </div>
+        <div class="border-fix" ng-click="vm.fixAssignment(item, driverSelect)">FIX!</div>
     </div>
-    <div class="border-fix"></div>
 </div>
