--- a/app/shared/directives/detailShipmentDirective.html
+++ b/app/shared/directives/detailShipmentDirective.html
@@ -86,8 +86,7 @@
 
         <div class="shipment-photos col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="no-photo" ng-if="!photoReady">{{'texts.shipment.choose_photos' | i18next}}</div>
-            <div ng-repeat="photo in showPhotos" style="background-image: url({{photo}})" class="photo">
-            </div>
+            <img ng-repeat="photo in showPhotos" src="{{photo}}" class="photo" />
         </div>
     </div>
     <div class="map-section auction-detail-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -106,7 +105,7 @@
         </div>
         <div ng-if="finished" ng-click="vm.getInvoice(item.id_auction)">INVOICE</div>
         <!-- Only for Android app-->
-        <div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1008.2028.1')"><span>Check QR Code</span></div>
+        <div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1008.2020.0')"><span>Check QR Code</span></div>
         <div class="my-button normal-button" ng-click="vm.postGPS(item.id_auction)"><span>Post GPS</span></div>
         <input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
         <input class="btn btn-primary" type="button" ng-click="vm.uploadPhoto(item.id_auction, photos)" value="upload">
