--- a/app/shared/directives/detailShipmentDirective.html
+++ b/app/shared/directives/detailShipmentDirective.html
@@ -77,7 +77,7 @@
             <div class="detail-content col-xs-9 col-sm-8 col-md-9 col-lg-9"><span>{{item.vehicle.type}}</span></div>
         </div>
     </div>
-    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-8 col-lg-8">
+    <div class="auction-detail-item col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <h2 class="red col-xs-12 col-sm-12 col-md-12 col-lg-12">{{'texts.shipment.photos' | i18next}}</h2>
         <div class="photo-buttons">
             <div class="my-button normal-button" ng-click="vm.showPhoto(item.id_auction, true)"><span>{{'texts.shipment.photos_before' | i18next}}</span></div>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="shipment-photos col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="no-photo" ng-if="!photoReady">{{'texts.shipment.choose_photos' | i18next}}</div>
+            <div class="no-photo" ng-if="!photoReady">{{'texts.shipment.no_photos' | i18next}}</div>
             <img ng-repeat="photo in showPhotos" src="{{photo}}" class="photo" />
         </div>
     </div>
@@ -94,20 +94,21 @@
         <div class="map-container-{{item.id_auction}}">
             <div class="text-center show-map">
                 <div class="my-button normal-button big-button" ng-click="vm.showMap(item.id_auction)">
-                <span>
-                    {{'texts.shipment.show_map' | i18next}}
-                </span>
+                    <span ng-show="!mapIsDisplayed">{{'texts.shipment.show_map' | i18next}}</span>
+                    <span ng-show="mapIsDisplayed">{{'texts.shipment.hide_map' | i18next}}</span>
                 </div>
             </div>
             <div class="map-wrap col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div id="map-{{item.id_auction}}" class="map"></div>
             </div>
         </div>
-        <div ng-if="finished" ng-click="vm.getInvoice(item.id_auction)">INVOICE</div>
+        <div ng-if="finished" class="my-button normal-button big-button"  ng-click="vm.getInvoice(item.id_auction)">
+            <span>{{'texts.shipment.open_invoice' | i18next}}</span>
+        </div>
         <!-- Only for Android app-->
-        <div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1008.2020.0')"><span>Check QR Code</span></div>
+        <!--<div class="my-button normal-button" ng-click="vm.checkQrCode(item.id_auction, '1008.2020.0')"><span>Check QR Code</span></div>
         <div class="my-button normal-button" ng-click="vm.postGPS(item.id_auction)"><span>Post GPS</span></div>
         <input type="file" id="newPhotos" class="uploadFile" accept="image/*" eg-files="photos" has-files="hasFiles" multiple>
-        <input class="btn btn-primary" type="button" ng-click="vm.uploadPhoto(item.id_auction, photos)" value="upload">
+        <input class="btn btn-primary" type="button" ng-click="vm.uploadPhoto(item.id_auction, photos)" value="upload">-->
     </div>
 </div>
