--- a/app/shared/directives/Menu/menuDirective.html
+++ b/app/shared/directives/Menu/menuDirective.html
@@ -1,69 +1,59 @@
-<span ng-if="user.isTransporter() || user.isDispatcher()">
+<span ng-if="user.isTransporter()">
     <div class="menu-tabs col-md-12">
         <div class="tab" ui-sref="auction" ng-class="aboveRoute == 'auction' ? 'active' : null">
-            Auction
+            {{'texts.tab.auction' | i18next}}
         </div>
-        <div class="tab" ui-sref="shipments_manage" ng-class="aboveRoute == 'shipments' ? 'active' : null">
-            Shipments
+        <div class="tab" ui-sref="new_shipments" ng-class="aboveRoute == 'shipments' ? 'active' : null">
+            {{'texts.tab.shipments' | i18next}}
         </div>
-        <div class="tab" ui-sref="my_company" ng-class="aboveRoute == 'company' ? 'active' : null">
-            Company
+        <div class="tab" ui-sref="company" ng-class="aboveRoute == 'company' ? 'active' : null">
+            {{'texts.tab.company' | i18next}}
         </div>
     </div>
     <div class="menu-vertical col-md-2" ng-if="aboveRoute == 'auction'">
         <div class="tab" ui-sref="auction" ng-class="underRoute == 'list' ? 'active' : null">
-            List
+            {{'texts.tab.list' | i18next}}
         </div>
         <div class="tab" ui-sref="favouriteAuction" ng-class="underRoute == 'favourite' ? 'active' : null">
-            Favourite
+            {{'texts.tab.favourite' | i18next}}
         </div>
-        <div class="tab" ui-sref="bidsauction"  ng-class="underRoute == 'bids' ? 'active' : null">
-            Bids
+        <div class="tab" ui-sref="bidsAuction"  ng-class="underRoute == 'bids' ? 'active' : null">
+            {{'texts.tab.bids' | i18next}}
         </div>
-        <div class="tab" ui-sref="winauction" ng-class="underRoute == 'win' ? 'active' : null" >
-            Win
+        <div class="tab" ui-sref="winAuction" ng-class="underRoute == 'win' ? 'active' : null" >
+            {{'texts.tab.win' | i18next}}
         </div>
     </div>
     <div class="menu-vertical col-md-2" ng-if="aboveRoute == 'shipments'">
-        <div class="tab" ui-sref="shipments_manage" ng-class="underRoute == 'manage' ? 'active' : null" >
-            Manage
+        <div class="tab"ui-sref="new_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
+            {{'texts.tab.new' | i18next}}
         </div>
-        <div class="tab"ui-sref="view_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
-            Overview
+        <div class="tab"ui-sref="in_progress_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
+            {{'texts.tab.in_progress' | i18next}}
+        </div>
+        <div class="tab"ui-sref="finished_shipments" ng-class="underRoute == 'overview' ? 'active' : null" >
+            {{'texts.tab.finished' | i18next}}
         </div>
     </div>
     <div class="menu-vertical col-md-2" ng-if="aboveRoute == 'company'">
-        <div class="tab" ui-sref="my_company" ng-class="underRoute == 'overview' ? 'active' : null">
-            Overview
+        <div class="tab" ui-sref="company" ng-class="underRoute == 'overview' ? 'active' : null">
+            {{'texts.tab.overview' | i18next}}
         </div>
-        <div class="tab" ui-sref="new_employee" ng-class="underRoute == 'employee' ? 'active' : null">
-            Add Employee
-        </div>
-        <div class="tab" ui-sref="new_vehicle" ng-class="underRoute == 'vehicle' ? 'active' : null">
-            Add Vehicle
+        <div class="tab" ui-sref="add_driver" ng-class="underRoute == 'employee' ? 'active' : null">
+            {{'texts.tab.add_driver' | i18next}}
         </div>
     </div>
 </span>
 <span ng-if="user.isSender()">
     <div class="menu-vertical col-md-2" ng-if="aboveRoute == 'auction'">
         <div class="tab" ui-sref="auction" ng-class="underRoute == 'list' ? 'active' : null">
-            List
+            {{'texts.tab.list' | i18next}}
         </div>
-        <div class="tab" ui-sref="createdauction" ng-class="underRoute == 'created' ? 'active' : null">
-            Created
+        <div class="tab" ui-sref="createdAuction" ng-class="underRoute == 'created' ? 'active' : null">
+            {{'texts.tab.created' | i18next}}
         </div>
-        <div class="tab" ui-sref="addauction"  ng-class="underRoute == 'add' ? 'active' : null">
-            Add auction
-        </div>
-    </div>
-</span>
-<span ng-if="user.isDriver()">
-    <div class="menu-vertical col-md-2">
-        <div class="tab" ui-sref="auction" ng-class="aboveRoute == 'auction' ? 'active' : null">
-            Auction List
-        </div>
-        <div class="tab" ui-sref="shipments" ng-class="aboveRoute == 'shipments' ? 'active' : null">
-            My Shipments
+        <div class="tab" ui-sref="createAuction"  ng-class="underRoute == 'add' ? 'active' : null">
+            {{'texts.tab.create_auction' | i18next}}
         </div>
     </div>
 </span>
