--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="/node_modules/moment/min/moment.min.js"></script>
 		<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="/node_modules/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+		<script src="/node_modules/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 		<script src="/node_modules/angular/angular.js"></script>
 		<script src="/bower_components/angular-timer/dist/angular-timer.js"></script>
 		<script src="/bower_components/humanize-duration/humanize-duration.js"></script>
@@ -80,6 +81,7 @@
 		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="/node_modules/bootstrap-social/bootstrap-social.css" />
 		<link rel="stylesheet" href="/node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css" />
+		<link rel="stylesheet" href="/node_modules/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" />
 		<!-- My Styles -->
 		<link rel="stylesheet" href="css/form.css" />
 		<link rel="stylesheet" href="css/loader.css" />
