--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		<script src="/app/components/Shipments/finished/finishedShipmentsController.js"></script>
 		<script src="/app/components/Company/companyController.js"></script>
 		<script src="/app/components/Company/AddDriver/addDriverController.js"></script>
+		<script src="/app/components/Admin/Users/usersController.js"></script>
 
 		<!-- Directives -->
 		<script src="/app/shared/directives/detailAuctionDirective.js"></script>
