--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		<script src="/app/shared/directives/detailShipmentDirective.js"></script>
 		<script src="/app/shared/directives/Menu/menuDirective.js"></script>
 		<script src="/app/shared/directives/egFiles.js"></script>
+		<script src="/app/shared/directives/pagingDirective.js"></script>
 
 		<!-- Route File -->
 		<script src="/app/routes.js"></script>
